<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout="@layout/fragment_account">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    tools:context=".ui.app.account.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/title_account"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline5"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetEnd="0dp"
            app:dividerInsetStart="0dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/action_profile"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetEnd="0dp"
            app:dividerInsetStart="0dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvMyPost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/action_my_recipe"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetEnd="0dp"
            app:dividerInsetStart="0dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvFavourite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/action_favourite"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetEnd="0dp"
            app:dividerInsetStart="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/action_logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
