<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:strokeWidth="1dp"
    app:strokeColor="@color/card_outline"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- media-->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageFavouriteRecipe"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvFavouriteTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_recipe_title"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvFavouriteAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/prompt_name"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2"
                android:textColor="?android:attr/textColorSecondary" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvFavouriteDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/prompt_recipe_desc"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFavouriteRemove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/action_favourite_remove"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                />

        </LinearLayout>
    </LinearLayout>




</com.google.android.material.card.MaterialCardView>