<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- media-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:scaleType="centerCrop"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/tvHomeRecipeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_recipe_title"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6" />

            <TextView
                android:id="@+id/tvHomeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/prompt_name"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:id="@+id/tvHomeDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/prompt_recipe_desc"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>
    </LinearLayout>




</com.google.android.material.card.MaterialCardView>