<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/recipeBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/recipeToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/md_theme_light_primary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="56dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipeBarLayout">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRecipeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="0dp"
                android:paddingTop="20dp"
                android:text="@string/prompt_recipe_title"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline5"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRecipeAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/prompt_name"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                android:textStyle="bold" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageRecipes"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:scaleType="centerCrop" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRecipeDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/prompt_recipe_desc"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1"
                android:textStyle="bold" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRecipeIngredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/title_ingredients"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                android:textStyle="bold" />

<!--            ingredient recycler view-->

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRecipeMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/title_method"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                android:textStyle="bold" />
<!--            method recycler view-->

<!--            for comment-->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:text="@string/title_comment"
                    android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                    android:textStyle="bold" />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvMockComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/mock_comment"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                android:textStyle="bold" />

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>